overflow issue test

--- a/css/ics.css
+++ b/css/ics.css
@@ -3,6 +3,7 @@
 	padding: 0;
 	box-sizing: border-box; 
 	font-family: 'Noto Sans TC', sans-serif;
+	overflow-x: hidden;
 }
 
 body{
